<resources>
    <string name="app_name">Tarea_Unidad_3</string>
    <string name="titulo">Juego de memoria</string>
    <string name="toast_diferencia">Las cartas no son iguales</string>
    <string name="toast_acierto">Las cartas son iguales</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_nueva_partida">Nueva partida</string>
    <string name="descripcion">Reverso de la carta</string>
    <string name="descripcion_cara">Cara de la carta. Pueden ser distintos diseños.</string>
    <string name="txt_contentDescription_icono_juego">Icono que representa un juego de memoria</string>
    <string name="txt_contentDescription_felicitacion">Imagen que felicita al jugador una vez haya encontrado todas las parejas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_estadisticas">Estadísticas</string>
    <string name="partida_actual">Partida actual:</string>
    <string name="parejas_encontradas">Parejas encontradas:</string>
    <string name="progreso">Progreso:</string>
    <string name="tiempo">Tiempo de la partida:</string>
    <string name="proxim">Proximamente...</string>
</resources>