<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="121dp"
            android:text="@string/titulo"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="37dp"
            android:layout_height="33dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/juego_de_memoria"
            android:contentDescription="@string/txt_contentDescription_icono_juego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="37dp"
            android:layout_height="33dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/juego_de_memoria"
            android:contentDescription="@string/txt_contentDescription_icono_juego"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:textColor="@color/md_theme_onBackground_mediumContrast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="92dp"
            android:text="@string/btn_salir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
            app:layout_constraintVertical_bias="0.545" />

        <Button
            android:id="@+id/btn_nuevaPartida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="104dp"
            android:text="@string/btn_nueva_partida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
            app:layout_constraintVertical_bias="0.5" />

        <Chronometer
            android:id="@+id/cronometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="32dp"
            android:background="#000000"
            android:backgroundTint="#000000"
            android:padding="5dp"
            android:textColor="#8BC34A"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.tarea_unidad_3.FragmentoCartas"
            android:layout_width="343dp"
            android:layout_height="393dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="#5FFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btn_nuevaPartida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/partida_ganada"
            android:layout_width="300dp"
            android:layout_height="347dp"
            android:layout_marginBottom="192dp"
            android:contentDescription="@string/txt_contentDescription_felicitacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>